2007-05-09  Jb Evain  <jb@nurv.fr>

	* Mono.Cecil.Binary/Image.cs:
		Throw when rva cannot be resolved.

	* Mono.Cecil.csproj
	  Mono.Cecil.Binary/ExportTable.cs
	  Mono.Cecil.Binary/BaseImageVisitor.cs
	  Mono.Cecil.Binary/ImageReader.cs
	  Mono.Cecil.Binary/IBinaryVisitor.cs
	  Mono.Cecil.Binary/Image.cs
	  Mono.Cecil.Binary/ImageInitializer.cs
	  Mono.Cecil/StructureReader.cs
	  Mono.Cecil/ReflectionWriter.cs:
		When present, read the export table, so that people
		reading non managed assemblies can use the Mono.Cecil.Binary
		stuff.

		Fix the bug when section name is 8 char long.

		Based on a patch by Pavel Savara <pavel.savara@gmail.com>.

2007-04-27  Jb Evain  <jb@nurv.fr>

	* Mono.Cecil/AssemblyNameReference.cs:
		Allow the computation of pktoken on CF_2_0.

2007-04-25  Jb Evain  <jb@nurv.fr>

	* Mono.Cecil/ModuleDefinition.cs
	  Mono.Cecil/ReflectionWriter.cs
	  Mono.Cecil.Cil/ISymbolWriter.cs
	  Mono.Cecil.Signatures/SignatureWriter.cs
		Start working on local var debug infos emitting.

2007-04-08  Jb Evain  <jb@nurv.fr>

	* Mono.Cecil/ParameterAttributes.cs:
		ParameterAttributes.None

2007-03-30  Jb Evain  <jb@nurv.fr>

	* Collections:
		Remove uneeded tests as an optimizations.
		Based on a suggestion by Carlo Kok <ck@remobjects.com>.

	* Mono.Cecil.Metadata/StringsHeap.cs:
		Optimize GetStringAt, patch by:
		Carlo Kok <ck@remobjects.com>

2007-03-22  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/AssemblyInfo.cs:
		Bump to 0.5.0.0 for the sake of our packagers friends.
		Re-Bump to 0.5.0.1.

	* Mono.Cecil/StructureWriter.cs:
		Throw a NotSupportedException instead of a NIE
		for mixed mode assemblies.

2007-03-20  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.Metadata/MetadataWriter.cs:
		Correct epilog for unicode user strings heap.

2007-03-16  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.Cil/CodeReader.cs
	  Mono.Cecil.Cil/MethodBody.cs:
		Add a MethodBody.Simplify method to expand
		macros.

	* Mono.Cecil.dll.sources
	  Mono.Cecil.csproj