@@ -1,3 +1,8 @@
+2007-05-16  Jb Evain  <jb@nurv.fr>
+
+	* Mono.Cecil/BaseAssemblyResolver:
+		try to resolve unversionned assemblies.
+
 2007-05-09  Jb Evain  <jb@nurv.fr>
 
 	* Mono.Cecil.Binary/Image.cs:
